--- a/package.json
+++ b/package.json
@@ -3,16 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/icons-material": "^5.8.4",
+    "@mui/material": "^5.8.4",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "@types/inflection": "^1.13.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "@types/recharts": "^1.8.23",
+    "inflection": "^1.13.2",
+    "ra-data-json-server": "^4.1.3",
+    "ra-input-rich-text": "^4.1.3",
     "react": "^18.2.0",
+    "react-admin": "^4.1.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.10",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
