--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/recharts": "^1.8.23",
+    "axios": "^0.27.2",
     "inflection": "^1.13.2",
+    "query-string": "^7.1.1",
     "ra-data-json-server": "^4.1.3",
     "ra-input-rich-text": "^4.1.3",
     "react": "^18.2.0",
